--- a/02/2_oszlopos_flexbox.html
+++ b/02/2_oszlopos_flexbox.html
@@ -10,15 +10,19 @@
     <div class="container">
         <div class="box">1
             <p>Megérett a megy</p>
+            <p class="p">🍒</p>
         </div>
         <div class="box">2
             <p>Csipkebokor vessző</p>
+            <p class="p">🌳</p>
         </div>
         <div class="box">3
             <p>Te leszel a párom</p>
+            <p class="p">👩‍❤️‍👨</p> 
         </div>
         <div class="box">4
             <p>Te veréb</p>
+            <p class="p">𓅫</p>
         </div>
         <div class="box">5
             <p>Leszállot a köd</p>
